Code cleanup prior to fixing SERVER-5842

Make three injected native JavaScript routines static since they are
not referenced outside this file.  Name them according to the convention
in engine_spidermonkey.cpp.  Use uassert consistently.  Make (user) error
messages correct, consistent and informative.